# hlist2

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
src/: cons.rs  convert.rs  iter.rs  lib.rs  nil.rs  tuple.rs
src/ops/: append.rs  extend.rs  flatten.rs  fold.rs  get.rs  get_many.rs  index.rs  map.rs  mod.rs  pair.rs  pop.rs  pop_front.rs  prepend.rs  provide.rs  remove.rs  remove_many.rs  reverse.rs  rfold.rs  shuffle.rs  to_mut.rs  to_ref.rs  unzip.rs  zip.rs
src/ops/fold/: folder.rs  left.rs  mod.rs  right.rs
src/ops/index/: many.rs  mod.rs  ops.rs  traits.rs  types.rs
src/ops/map/: map.rs  mapper.rs  mod.rs
