[package]
name = "hlist2"
version = "0.0.7"
edition = "2021"
description = "Compile-time heterogeneous list implementation"
authors = ["tuguzT <timurka.tugushev@gmail.com>"]
repository = "https://github.com/tuguzT/hlist2"
license = "MIT OR Apache-2.0"
keywords = ["safe", "heterogeneous", "hlist", "no-std"]
categories = ["data-structures", "rust-patterns", "algorithms", "no-std"]
